k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odabs-deployment
spec:
  type: NodePort
  selector:
    app: odabs-deployment
  ports:
    - port: 8000
      targetPort: 8000
