k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odabs-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: odabs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odabs-deployment
                port:
                  number: 8000
